--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
+    <link rel="stylesheet" href="../src/styles.css"/>
   </head>
   <body>
     <div id="root"></div>
+    <div id="root2"></div>
+
     <script src="../src/index.js" type="text/javascript"></script>
+    
   </body>
 </html>
