--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <div id="root"></div>
     <div id="root2"></div>
 
-    <script src="../src/index.js" type="text/javascript"></script>
+    <script src="../src/index.js" type="text/JSX"></script>
     
   </body>
 </html>
